added int division and power